# hardhat-ai

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/hardhat/: __init__.py  cli.py  models.py  report.py  simulator.py
src/hardhat/detector/: __init__.py  compliance.py  hazard.py  ppe.py
src/hardhat/rules/: __init__.py  inspection.py  osha.py  penalties.py
tests/: test_benchmark.py  test_core.py  test_detector.py  test_inspection.py  test_integration.py  test_models.py  test_osha.py  test_penalties.py  test_simulator.py
